--- a/src/main/resources/templates/board/boardListTest.html
+++ b/src/main/resources/templates/board/boardListTest.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/basic">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/basic">
 
 <th:block layout:fragment="script">
-    <script>
-
+    <script th:inline="javascript">
+        function getParameterByName(name) {
+            name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+                results = regex.exec(location.search);
+            return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+        }
+        var pages = getParameterByName("page");
+        if(pages == ""){
+            pages=0;
+        }
+        $("#page"+pages).attr("class","active");
     </script>
 </th:block>
 <th:block layout:fragment="title">
@@ -27,9 +37,9 @@
                         게시판
                     </a>
                     <div class="dropdown-menu text-center">
-                        <a class="dropdown-item" href="#">게시판1</a>
-                        <a class="dropdown-item" href="#">게시판2</a>
-                        <a class="dropdown-item" href="#">게시판3</a>
+                        <a class="dropdown-item" href="/board/boardListTest?boardtype=게시판1">게시판1</a>
+                        <a class="dropdown-item" href="/board/boardListTest?boardtype=게시판2">게시판2</a>
+                        <a class="dropdown-item" href="/board/boardListTest?boardtype=게시판3">게시판3</a>
                     </div>
                 </li>
 
@@ -40,6 +50,7 @@
     </div>
     <div><h2 style="color:Blue">Board list</h2></div>
     <br><br>
+    
     <table class="table table-horizontal table-bordered">
         <thead class="thead-strong">
         <tr>
@@ -54,20 +65,35 @@
         <tbody id="tbody">
         <tr th:each="boardlist :${board}">
             <td th:text="${boardlist.getBno()}"></td>
-            <td> <a th:href="@{'/board/boardViewTest/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"> </a></td>
+            <td> <a th:href="@{'/board/boardViewTest/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
             <td th:text="${boardlist.getNickname()}"></td>
-            <td th:text="${boardlist.getRegdate()}"></td>
-            <td th:text="${boardlist.getReadcount()}"></td>
-            <td th:text="${boardlist.getLikecount()}"></td>
+            <td th:text="${boardlist.getRegister_date()}"></td>
+            <td th:text="${boardlist.getRead_count()}"></td>
+            <td th:text="${boardlist.getLike_count()}"></td>
         </tr>
         </tbody>
     </table>
 
-        <div style="float: right">
-            <button type="button" onClick="location.href='/board/boardInsertTest'" class="btn btn-primary waves-effect waves-light">등록</button>
-        </div>
-    </div>
-    <!-- /.card-content -->
+    <ul class="pagination">
+        <li id="pagefirst">
+            <a href="?page=0">
+                <span>«</span>
+            </a>
+        </li>
+        <li  th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
+            <a th:href="'?'+page+'='+${num}" th:text="${num+1}"></a>
+        </li>
+        <li>
+            <a th:href="'?'+page+'='+${board.getTotalPages()}">
+                <span>»</span>
+            </a>
+        </li>
+    </ul>
 
+    <div style="float: right">
+    	<button type="button" onClick="location.href='/studentInfo/studentInfoTest'" class="btn btn-primary waves-effect waves-light">학생 정보</button>
+     	<button type="button" onClick="location.href='/board/boardInsertTest'" class="btn btn-primary waves-effect waves-light">등록</button>
+     </div>
+    <!-- /.card-content -->
 </th:block>
 </html>
