--- a/src/main/resources/templates/board/boardUpdateTest.html
+++ b/src/main/resources/templates/board/boardUpdateTest.html
@@ -2,32 +2,26 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
 <th:block layout:fragment="script">
-    <script type="text/javascript">
-        function getParameterByName(name) {
-            name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-                results = regex.exec(location.search);
-            return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
-        }
+    <script type="text/javascript" th:inline="javascript">
 
         function dataSend() {
-            var gender = $(":input:radio[name=gen]:checked").val();
             let queryString = $('#infoForm').serialize() ;
+            var bno=[[${board.getBno()}]];
             var boardtype=$('#boardtype').val();
             $.ajax({
-                type: "POST",
-                url : "/boardInsert",
+                type: "PUT",
+                url : "/boardUpdate/"+bno,
                 data : queryString,
                 // data : queryString,
                 // contentType:'application/json; charset=utf-8',
                 // datatype : 'json',
                 success : function(data){
-                    if(data == $('#sid').val()) {
-                        alert("등록 성공");
+                    if(data == bno) {
+                        alert("수정 성공");
                         location.href='/board/boardListTest?boardtype='+boardtype;
                     }
                     else
-                        alert("등록 실패");
+                        alert("수정 실패");
                 },error : function(){
                     alert(queryString);
                     return false;
@@ -37,7 +31,7 @@
         }
     </script>
     <script th:inline="javascript">
-        var a=getParameterByName("boardtype");
+        var a=[[${board.getBoardtype()}]];
         $("#"+a).attr("selected","selected");
     </script>
 </th:block>
@@ -52,37 +46,39 @@
     <div class="card-content">
         <form id="infoForm" name="infoForm">
             <div class="container">
+
                 <select class="form-control" name="boardtype" id="boardtype">
                     <option id="자유게시판" name="자유게시판">자유게시판</option>
                     <option id="잡담게시판" name="잡담게시판">잡담게시판</option>
                     <option id="게임게시판" name="게임게시판">게임게시판</option>
                 </select>
+
             </div>
             <br>
             <div>
                 <label class="col-sm-2 control-label">제목</label>
                 <div class="col-sm-10">
-                    <input type="text" id="title" name="title" class="form-control" placeholder="제목 입력" required="required"/>
+                    <input type="text" id="title" name="title" class="form-control" placeholder="제목 입력" th:value="${board.getTitle()}" required="required"/>
                 </div>
             </div>
 
             <div>
                 <label class="col-sm-2 control-label">내용</label>
                 <div class="col-sm-10">
-                    <textarea type="text" id="content" name="content" class="form-control" placeholder="내용 입력" required="required"></textarea>
+                    <textarea type="text" id="content" name="content" class="form-control" placeholder="내용 입력" th:text="${board.getContent()}" required="required"></textarea>
                 </div>
             </div>
             <div>
                 <div>
                     <label th:for="writer" class="col-sm-2 control-label">학번</label>
                     <div class="col-sm-10" >
-                        <input type="text" name = "sid" id = "sid" class="form-control" placeholder="학번을 입력해 주세요." required="required"/>
+                        <input type="text" name = "sid" id = "sid" class="form-control" placeholder="학번을 입력해 주세요." th:value="${board.getSid()}"required="required"/>
                     </div>
                 </div>
                 <div>
                     <label th:for="writer" class="col-sm-2 control-label">닉네임</label>
                     <div class="col-sm-10" >
-                        <input type="text" name = "nickname" id = "nickname" class="form-control" placeholder="학번을 입력해 주세요." required="required"/>
+                        <input type="text" name = "nickname" id = "nickname" class="form-control" placeholder="학번을 입력해 주세요."th:value="${board.getNickname()}" required="required"/>
                     </div>
                 </div>
             </div>
@@ -91,21 +87,11 @@
                 <input type="file" id="imagepath" name="imagepath" />
                 <div class="select_img"><img src="" /></div>
 
-                <script>
-                    $("#gdsImg").change(function(){
-                        if(this.files && this.files[0]) {
-                            var reader = new FileReader;
-                            reader.onload = function(data) {
-                                $(".select_img img").attr("src", data.target.result).width(500);
-                            }
-                            reader.readAsDataURL(this.files[0]);
-                        }
-                    });
-                </script>
+
             </div>
         </form>
         <div>
-            <button type="button" class="btn btn-primary waves-effect waves-light" onclick="dataSend()">등록</button>
+            <button type="button" class="btn btn-primary waves-effect waves-light" onclick="dataSend()">수정</button>
             <button type="button" onClick="history.back(-1);" class="btn btn-primary waves-effect waves-light">이전</button>
         </div>
 
