--- a/src/main/resources/templates/board/boardViewTest.html
+++ b/src/main/resources/templates/board/boardViewTest.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/basic">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
 <th:block layout:fragment="script">
     <script type="text/javascript">
@@ -14,43 +14,57 @@
             pages=0;
         }
         $("#page"+pages).attr("class","active");
-
-        function dataSend() {
-            var gender = $(":input:radio[name=gen]:checked").val();
-            let queryString = $('#infoForm').serialize() ;
-
-            /*var messageDTO={
-                result:data
-           };*/
-
-            /*var data ={
-                sid : $("#sid").val(),
-                department : $("#department").val(),
-                syear : $("#syear").val(),
-                nickname : $("#nickname").val(),
-                email : $("#email").val(),
-                gen : gender
-            };*/
-            $.ajax({
-                type: "POST",
-                url : "/studentRegistration",
-                data : queryString,
-                // data : queryString,
-                // contentType:'application/json; charset=utf-8',
-                // datatype : 'json',
-                success : function(data){
-                    if(data == $('#sid').val()) {
-                        alert("등록 성공");
-                        location.href='/studentInfo/studentRegistrationTest';
-                    }
-                    else
-                        alert("등록 실패");
-                },error : function(){
-                    alert(queryString);
-                    return false;
-                }
-            });
-            return false;
+        
+        function commentCancel(part) {
+        	document.getElementById(part + "commentForm").style.display = "none";
+        	document.getElementById(part + "cTextArea").value = "";
+        	document.getElementById(part + "csid").value = "";
+        	document.getElementById(part + "cnickname").value = "";
+        }
+        
+        function commentRegister(part) {
+        	var boardNumber = document.getElementsByName("boardNumber")[0].id;
+        	var sid = $("#" + part + "csid");
+        	var nickname = $("#" + part + "cnickname");
+        	var content = $("#" + part + "cTextArea");
+        	
+        	if(sid.val() == "") {
+        		alert("학번 입력");
+        		sid.focus();
+        		return false;
+        	}
+        	if(nickname.val() == "") {
+        		alert("닉네임 입력");
+        		nickname.focus();
+        		return false;
+        	}
+        	if(content.val() == "") {
+        		alert("내용 입력");
+        		content.focus();
+        		return false;
+        	}
+        	
+        	$.ajax({
+        	    type: "POST",
+        	    url : "/boardComment/boardCommentInsertTest",
+        	    data : {
+        	    	bno : boardNumber,
+        	    	sid : sid.val(),
+        	    	nickname : nickname.val(),
+        	        content : content.val(),
+        	    },
+        	    success : function(data){
+        	    	if(data == true) {
+        	        	alert("댓글 등록 성공");
+        	        	commentCancel(part);
+        	    	}
+        	    	else
+        	    		alert("댓글 등록 실패");
+        	    },error : function(){
+        	        alert("Error");
+        	        return false;
+        	    }
+        	});
         }
     </script>
 </th:block>
@@ -60,6 +74,8 @@
 </th:block>
 
 <th:block layout:fragment="content">
+	<input type = "hidden" th:id="${board.bno}" name="boardNumber">
+
     <div><h2 th:text="${board.getTitle()}"></h2></div>
     <br><br>
     <div class="card-content">
@@ -79,12 +95,33 @@
             </div>
         </form>
         <div>
-            <button type="button" class="btn btn-primary waves-effect waves-light" onclick="dataSend()">수정</button>
-            <button type="button" onClick="location.href='/board/boardListTest'" class="btn btn-primary waves-effect waves-light">이전</button>
+            <a type="button" class="btn btn-primary waves-effect waves-light" th:href="'/board/boardUpdate/'+${board.getBno()}">수정</a>
+            <button type="button" onClick="location.href='/board/boardListTest?boardtype=자유게시판'" class="btn btn-primary waves-effect waves-light">이전</button>
+            <button type="button" onClick="document.getElementById('commentForm').style.display='block';" class="btn btn-primary waves-effect waves-light">댓글작성</button>
         </div>
     </div>
     
     <br><br>
+    <div id="commentForm" style="margin-left:20%; width:600px; height:180px; border:1px solid red; 
+    line-height:70%; text-align:center; display:none">
+    	<div style="font-size:10pt; text-align:left; margin-left:5%; margin-top:10px">
+    		<b>&lt;댓글 작성&gt;</b>
+    		<div style="float:right; font-size:10pt; text-align:left; margin-right:5%;">
+				학번 <br><br><input type="text" id = "csid" name = "sid"/> <br><br>
+				닉네임<br><br><input type="text" id = "cnickname" name = "nickname"/>
+			</div>
+    		<br>
+    		<textarea id = "cTextArea" rows = "5" cols = "50" placeholder = "이곳에 댓글 입력" 
+    			maxlength = 200 style="font-size:12px; margin-top:10px;"></textarea>
+    		<br><br>(200자 내외)
+		</div>
+		<br>
+		<div>
+			<button type="button" onClick="return commentRegister('');" class="btn btn-primary waves-effect waves-light">등록</button>
+			<button type="button" onClick="commentCancel('');" class="btn btn-primary waves-effect waves-light">취소</button>
+		</div>
+    </div><br><br>
+
     <table class="table table-horizontal table-bordered">
         <thead class="thead-strong">
         <tr>
@@ -93,10 +130,12 @@
         </thead>
         <tbody id="tbody">
         <tr th:each="boardComment :${boardCommentList}">
+        	<td th:if="${boardComment.getCcno()} != 0" width = "50"></td>
             <td th:text="${boardComment.getCno()}" width="50"></td>
             <td th:text="${boardComment.getNickname()}" width="200"></td>
             <td th:text="${boardComment.getRegister_date()}" width="200"></td>
             <td th:text="${boardComment.getContent()}"></td>
+            <td width="50"><a onClick="document.getElementById('ccommentForm').style.display='block';" style="color:#DB8383; font-size:10px; cursor:pointer;">댓글쓰기</a></td>
         </tr>
         </tbody>
     </table>
@@ -111,11 +150,34 @@
             <a th:href="'?'+page+'='+${num}" th:text="${num+1}"></a>
         </li>
         <li>
-            <a th:href="'?'+page+'='+${boardCommentList.getTotalPages()}">
+            <a th:if="${boardCommentList.getTotalPages()}>0" th:href="'?'+page+'='+${boardCommentList.getTotalPages()-1}">
+                <span>»</span>
+            </a>
+            <a th:if="${boardCommentList.getTotalPages()}==0" th:href="'?'+page+'='+${boardCommentList.getTotalPages()}">
                 <span>»</span>
             </a>
         </li>
     </ul>
+    <br><br>
+    <div id="ccommentForm" style="margin-left:20%; width:600px; height:180px; border:1px solid #6324BD; 
+    line-height:70%; text-align:center; display:none">
+    	<div style="font-size:10pt; text-align:left; margin-left:5%; margin-top:10px">
+    		<b>&lt;대댓글 작성&gt;</b>
+    		<div style="float:right; font-size:10pt; text-align:left; margin-right:5%;">
+				학번 <br><br><input type="text" id = "ccsid"/> <br><br>
+				닉네임<br><br><input type="text" id = "ccnickname"/>
+			</div>
+    		<br>
+    		<textarea id = "ccTextArea" rows = "5" cols = "50" placeholder = "이곳에 댓글 입력" 
+    			maxlength = 200 style="font-size:12px; margin-top:10px;"></textarea>
+    		<br><br>(200자 내외)
+		</div>
+		<br>
+		<div>
+			<button type="button" class="btn btn-primary waves-effect waves-light">등록</button>
+			<button type="button" onClick="commentCancel('c');" class="btn btn-primary waves-effect waves-light">취소</button>
+		</div>
+    </div>
 
     <!-- /.card-content -->
 </th:block>
