--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -15,7 +15,7 @@
        	 result:data
    	};*/
     	$.ajax({
-        	url: "/getStudentInfo",
+        	url: "/studentInfo/getStudentInfo",
        	 	data: sid,
         	type: "POST",
         	contentType:'application/json; charset=utf-8',
@@ -42,7 +42,7 @@
 	
 	function getStudentCount() {
     	$.ajax({
-        	url: "/getStudentCount",
+        	url: "/studentInfo/getStudentCount",
         	type: "POST",
         	success: function(fragment){
         		if(fragment == 0)
@@ -71,7 +71,7 @@
 		}
 		
     	$.ajax({
-        	url: "/updateStudentNickname",
+        	url: "/studentInfo/updateStudentNickname",
         	data : { sid : sid,
         		nickname : nickname
         	},
@@ -102,7 +102,7 @@
 		}
 		
     	$.ajax({
-        	url: "/updateStudentEmail",
+        	url: "/studentInfo/updateStudentEmail",
         	data : { sid : sid,
         		email : email
         	},
@@ -193,7 +193,7 @@
 				<button type="button" onClick="getStudentCount()" class="btn btn-primary waves-effect waves-light">학생 수</button>
 				<button th:if="${userSid} != null" type="button" onClick="location.href='/logout'" class="btn btn-primary waves-effect waves-light">로그아웃</button>
 				<button th:unless="${userSid} != null" type="button" onClick="location.href='/login'" class="btn btn-primary waves-effect waves-light">로그인</button>
-				<button type="button" onClick="location.href='/board/boardListTest?boardtype=자유게시판'" class="btn btn-primary waves-effect waves-light">게시판</button>
+				<button type="button" onClick="location.href='/board/boardList?boardtype=자유게시판'" class="btn btn-primary waves-effect waves-light">게시판</button>
 			</div>
 		</div>
 		<!-- /.card-content -->
