--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -18,7 +18,7 @@
         var boardtype=getParameterByName("boardtype");
         
         function InsertBoard() {
-            location.href = "/board/boardInsertTest?boardtype=" +boardtype;
+            location.href = "/board/boardInsert?boardtype=" +boardtype;
         }
     </script>
 
@@ -44,9 +44,9 @@
                         게시판
                     </a>
                     <div class="dropdown-menu text-center">
-                        <a class="dropdown-item" href="/board/boardListTest?boardtype=자유게시판">자유게시판</a>
-                        <a class="dropdown-item" href="/board/boardListTest?boardtype=잡담게시판">잡담게시판</a>
-                        <a class="dropdown-item" href="/board/boardListTest?boardtype=게임게시판">게임게시판</a>
+                        <a class="dropdown-item" href="/board/boardList?boardtype=자유게시판">자유게시판</a>
+                        <a class="dropdown-item" href="/board/boardList?boardtype=잡담게시판">잡담게시판</a>
+                        <a class="dropdown-item" href="/board/boardList?boardtype=게임게시판">게임게시판</a>
                     </div>
                 </li>
 
@@ -72,7 +72,7 @@
         <tbody id="tbody">
         <tr th:each="boardlist :${board}">
             <td th:text="${boardlist.getBno()}"></td>
-            <td> <a th:href="@{'/board/boardViewTest/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
+            <td> <a th:href="@{'/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
             <td th:text="${boardlist.getNickname()}"></td>
             <td th:text="${boardlist.getRegister_date()}"></td>
             <td th:text="${boardlist.getRead_count()}"></td>
@@ -101,7 +101,7 @@
     </ul>
 
     <div style="float: right">
-        <button type="button" onClick="location.href='/studentInfo/studentInfoTest'" class="btn btn-primary waves-effect waves-light">학생 정보</button>
+        <button type="button" onClick="location.href='/studentInfo/studentInfo'" class="btn btn-primary waves-effect waves-light">학생 정보</button>
         <button th:if="${userSid} != null" type="button" onClick="InsertBoard()" class="btn btn-primary waves-effect waves-light">등록</button>
     </div>
     <!-- /.card-content -->
