--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -41,16 +41,14 @@
             <ul class="nav flex-column">
                 <li class="dropdown dropright">
                     <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true">
-                        게시판
+                    	 게시판
                     </a>
                     <div class="dropdown-menu text-center">
-                        <a class="dropdown-item" href="/board/boardList?boardtype=자유게시판">자유게시판</a>
-                        <a class="dropdown-item" href="/board/boardList?boardtype=잡담게시판">잡담게시판</a>
+                        <a class="dropdown-item" href="/board/boardList?boardtype=자유게시판">자유게시판</a><br>
+                        <a class="dropdown-item" href="/board/boardList?boardtype=잡담게시판">잡담게시판</a><br>
                         <a class="dropdown-item" href="/board/boardList?boardtype=게임게시판">게임게시판</a>
                     </div>
                 </li>
-
-
             </ul>
         </div>
         <br>
